[package]
name = "blockchain_rust"
author = "Zerox_fan fankeeprun@gmail.com"
version = "1.0.0"
about = "A blockchain based on proof of work implemented in Rust."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
serde = {version = "1.0.188", features = ["derive"]}
chrono = "0.4.26"
sha256 = "1.4.0"
clap = {version = "4.4.2",features = ["cargo"]}
log = "0.4.20"
env_logger = "0.10.0"
sled = "0.34.7"
rand = "0.8.5"
ed25519-dalek = {version = "2.0.0",features = ["rand_core"]}
ripemd = "0.1.3"
bitcoincash-addr = "0.5.2"